kurlnavigator: restrict middle click pasting from selection clipboard

Also better check the url coming from the clipboard, passing the current
working directory along the way.

BUG: 486229